--- a/css/styles.css
+++ b/css/styles.css
@@ -9,16 +9,14 @@ h1 {
     font-size: 75px;
 }
 
-h2, h3 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
-}
-
 h2 {
-    color: #202835;
+    font-family: 'Montserrat', sans-serif;
+    color: #878fa0;;
+    font-size: 28px;
 }
 
 h3 {
+    font-family: 'Montserrat', sans-serif;
     color: #50B547;
     font-size: 34px;
     font-weight: bold;
