--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,13 @@ h7, h8 {
     font-weight: bold;
 }
 
+.topnav {
+    padding: 30px;
+}
+
+.search {
+    padding: 14px;
+}
 .row-content {
     padding: 50px 0;           
     border-bottom: 1px ridge;
