--- a/css/styles.css
+++ b/css/styles.css
@@ -92,6 +92,11 @@ h7, h8 {
 .search {
     padding: 14px;
 }
+
+.description {
+    padding: 100px;
+}
+
 .row-content {
     padding: 50px 0;           
     border-bottom: 1px ridge;
